--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,25 @@ body {
     color:gainsboro; 
   }
 
-.button{
+button{
+    height:100px;
+    width:300px;
     background-color: rgb(23, 23, 27);
     border: 1px solid black;
+    color: gainsboro;
+    text-indent: 3px;
+    text-align: center;
+    border-radius: 12px;
+    transition-duration: 0.4s;
+}
+
+button:hover {
+  background-color: gainsboro;
+  color: black;
+}
+
+textarea{
+  background-color: rgb(41, 41, 43);
+  height:600px;
+  width:650px;
 }
