--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 body {
     background-color:rgb(26, 26, 29);
     color:gainsboro; 
+
   }
 
 button{
     height:100px;
-    width:300px;
-    background-color: rgb(23, 23, 27);
+    width:90%;
+    background-color: rgb(29, 28, 35, 30);
+    margin-left: 40px;
     border: 1px solid black;
     color: gainsboro;
     text-indent: 3px;
@@ -21,7 +23,14 @@ button:hover {
 }
 
 textarea{
-  background-color: rgb(41, 41, 43);
-  height:600px;
-  width:650px;
+  background-color: rgb(40, 39, 40, 37);
+  width:90%;
+  resize: none;
+  color: gainsboro;
 }
+
+#textarea1{
+  height: 600px;
+}
+
+html { overflow-x: hidden; }
