--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ button{
     text-align: center;
     border-radius: 12px;
     transition-duration: 0.4s;
+    font-size: 200%;
 }
 
 button:hover {
@@ -33,4 +34,4 @@ textarea{
   height: 600px;
 }
 
-html { overflow-x: hidden; }
+/*html { overflow-x: hidden; }*/
