--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 
   }
 
-button{
+#button1{
     height:100px;
     width:90%;
     background-color: rgb(29, 28, 35, 30);
@@ -33,5 +33,4 @@ textarea{
 #textarea1{
   height: 600px;
 }
-
 /*html { overflow-x: hidden; }*/
