--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,22 @@
 body {
     background-color:rgb(26, 26, 29);
-    color:gainsboro; 
-
+    color:gainsboro;
   }
 
-  .btn{
-  margin-left: -30%; 
-  width: 160%; 
+.btn{
+  width: 100%; 
   height: 100%; 
-  background-color: 
-  rgb(195, 143, 255, 187); 
+  background-color: rgb(195, 143, 255, 187); 
   border: 1px solid black;
   border-radius: 0px;
   color: black;
-  
+  font-size: 120%;
+}
+
+.btn:hover {
+  border-color: gainsboro;
+  background-color: #a660fc;
+  color: black;
 }
   
 #button1{
@@ -46,10 +49,11 @@ textarea{
   height: 600px;
 }
 
-.noteCard{
+.card-body{
   height: 100px; 
+  width: 245px;
   background-color: rgb(29, 28, 35, 30);
-  color: gainsboro;
+  color: rgb(220, 220, 220);
   border-radius: 0px; 
   border: 1px solid black;
 }
@@ -62,7 +66,24 @@ textarea{
   max-height: 500px;
   overflow: auto;
   overflow-x: hidden;
+  
   /*overflow-y: scroll;*/
   
 }
-/*html { overflow-x: hidden; }*/
+
+#HomePage:link{
+  color: gainsboro;
+  text-decoration: none;
+}
+
+#HomePage:visited {
+  color: gainsboro;
+  text-decoration: none;
+}
+
+.card-text{
+  margin-top: -10%; 
+
+}
+
+html { overflow-x: hidden; }
