--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   width: 100%; 
   height: 100%; 
   background-color: rgb(195, 143, 255, 187); 
-  border: 1px solid black;
+  border: 1px solid rgb(0, 0, 0);
   border-radius: 0px;
   color: black;
   font-size: 120%;
@@ -21,9 +21,9 @@ body {
   
 #button1{
     height:100px;
-    width:90%;
+    width:100%;
     background-color: rgb(29, 28, 35, 30);
-    margin-left: 40px;
+    margin-left: 10px;
     border: 1px solid black;
     color: gainsboro;
     text-indent: 3px;
@@ -31,11 +31,6 @@ body {
     transition-duration: 0.4s;
     font-size: 200%;
     
-}
-
-button:hover {
-  background-color: gainsboro;
-  color: black;
 }
 
 textarea{
@@ -50,8 +45,11 @@ textarea{
 }
 
 .card-body{
+  padding-top: 3%;
+  padding-bottom: 3%;
+  padding-right: 0%;
   height: 100px; 
-  width: 245px;
+  width: 281px;
   background-color: rgb(29, 28, 35, 30);
   color: rgb(220, 220, 220);
   border-radius: 0px; 
@@ -61,8 +59,8 @@ textarea{
 #notes{
   
   background-color: gray;
-  width: 90%; 
-  margin-left: 40px; 
+  width: 100%; 
+  margin-left: 10px; 
   max-height: 500px;
   overflow: auto;
   overflow-x: hidden;
@@ -82,8 +80,24 @@ textarea{
 }
 
 .card-text{
-  margin-top: -10%; 
+  
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
+.card-title{
+  line-height: 80%; 
+  margin: 0%;
+  height: 30px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.card-date{
+  margin-bottom: 0%;
+  font-size: 85%;
 }
 
 html { overflow-x: hidden; }
